--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ theme:
     - content.code.copy
 
 nav:
-  - Главная: index.md
+  - index.md
   - О себе:
     - about/about.md
     - Опыт работы: about/experience.md
