--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,7 @@ theme:
 nav:
   - Главная: index.md
   - О себе:
-    - about/about.md
+    - about/index.md
     - Опыт работы: about/experience.md
     - Навыки и компетенции: about/skills.md
   - Портфолио:
