--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ theme:
 
 nav:
   - Главная: index.md
-  - О Вячеславе:
+  - О бо мне:
     - Основное: about/index.md
     - Опыт работы: about/experience.md
     - Навыки и компетенции: about/skills.md
