изменил фамилию в мкдокс-основном

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: Вячеслав Лаптев - Siemens SIMATIC Specialist
+site_name: Вячеслав Фамммилия - Siemens SIMATIC Specialist
 site_url: https://vjacheslav772.github.io/Test_Site/
-site_author: Вячеслав Лаптев
+site_author: Вячеслав Фамммилия
 site_description: >-
   Персональное портфолио инженера-программиста контроллеров Siemens SIMATIC,
   DevOps специалиста и преподавателя. Опыт в промышленной автоматизации,
@@ -200,5 +200,5 @@ extra_javascript:
 
 # Копирайт
 copyright: >
-  Copyright &copy; 2025 Вячеслав Лаптев. 
+  Copyright &copy; 2025 Вячеслав Фамммилия. 
   <a href="#__consent">Настройки куки</a>
