--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Вячеслав Фамммилия - Siemens SIMATIC Specialist
+site_name: Вячеслав Фамммммммилия - Siemens SIMATIC Specialist
 site_url: https://vjacheslav772.github.io/Test_Site/
 site_author: Вячеслав Фамммилия
 site_description: >-
