--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 
-site_name: Вячеслав Лаптев - DevOps Engineer & SCADA Developer
+site_name: Вячеслав Апроду - DevOps Engineer & SCADA Developer
 site_url: https://vjacheslav772.github.io/Test_Site/
-site_author: Вячеслав Лаптевв
+site_author: Вячеслав Апроду
 site_description: Персональное портфолио инженера-программиста контроллеров Siemens
 
 theme:
