--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 
 site_name: Вячеслав Апроду - DevOps Engineer & SCADA Developer
-site_url: https://vjacheslav772.github.io/Test_Site/
+site_url: https://aprodu-plc.ru/
 site_author: Вячеслав Апроду
 site_description: Персональное портфолио инженера-программиста контроллеров Siemens
 
