--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 
-site_name: Апроду Вячеслав PLC & SCADA Engineer-Developer
+site_name: Vyacheslav Aprodu — PLC & SCADA Engineer-Developer | Siemens Automation Expert
 site_url: https://aprodu-plc.ru/
 site_author: Вячеслав Апроду
 site_description: Персональное портфолио инженера-программиста контроллеров Siemens
