--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 
 site_name: Vyacheslav Aprodu — PLC & SCADA Engineer-Developer | Siemens Automation Expert
-site_url: https://aprodu-plc.ru/
+site_url: https://vjacheslav772.github.io/Test_Site/
 site_author: Vyacheslav Aprodu
 site_description: Персональный сайт инженера-программиста контроллеров Siemens SIMATIC
 
