--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,3 +59,4 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences
+copyright: Copyright &copy; 2025 Vyacheslav Aprodu
