--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: Vyacheslav Aprodu — PLC & SCADA Engineer-Developer | Siemens Automation Expert
 site_url: https://Vjacheslav772.github.io/Test_Site/
 site_author: Vyacheslav Aprodu
-site_description: Персональный сайт инженера-программиста контроллеров Siemens SIMATIC
+site_description: Персональный саffffffffйт инженера-программиста контроллеров Siemens SIMATIC
 
 theme:
   name: material
